--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -13,36 +13,40 @@
   --line-height-tight: 1;
 
   /* Font sizes */
-  --font-size-global: 18px;
-  --font-size-xx-small: rem(10px);
-  --font-size-x-small: rem(12px);
-  --font-size-small: rem(14px);
-  --font-size-base: rem(18px);
-  --font-size-base-plus: rem(20px);
-  --font-size-medium: rem(28px);
-  --font-size-large: rem(36px);
-  --font-size-x-large: rem(48px);
+  --font-size-global: 16px;
+  --font-size-xx-small: 10px;
+  --font-size-x-small: 12px;
+  --font-size-small: 14px;
+  --font-size-base: 16px;
+  --font-size-base-plus: 18px;
+  --font-size-medium: 28px;
+  --font-size-large: 36px;
+  --font-size-x-large: 48px;
 
   /* Spacing */
   --spacing-base: 1rem;
-  --spacing-x-small: var(--spacing-base) / 4;
-  --spacing-small: var(--spacing-base) / 2;
-  --spacing-medium: var(--spacing-base) * 1.5;
-  --spacing-large: var(--spacing-base) * 2;
-  --spacing-x-large: var(--spacing-base) * 4;
+  --spacing-x-small: calc(var(--spacing-base) / 4);
+  --spacing-small: calc(var(--spacing-base) / 2);
+  --spacing-medium: calc(var(--spacing-base) * 1.5);
+  --spacing-large: calc(var(--spacing-base) * 2);
+  --spacing-x-large: calc(var(--spacing-base) * 4);
 
   /* Colors */
   --color-black: #313131;
   --color-white: #fff;
+  --color-subtle-grey: #fafafa;
+  --color-medium-grey: #8c8c8c;
   --color-grey: #646464;
+
   --color-text: var(--color-black);
   --color-outline: var(--color-black);
+  --color-white-reverse: var(--color-black);
 
   /* Borders */
   --border-radius-base: 3px;
   --border-radius-circle: 50%;
 
   /* Transitions */
-  --transition-base: 0.2s ease-in-out all;
+  --transition-base: 0.15s ease-in-out all;
 }
 
