--- a/assets/css/modules/landing.css
+++ b/assets/css/modules/landing.css
@@ -1,5 +1,5 @@
 .dialog {
-  min-height: 12rem;
+  min-height: 10rem;
 }
 
 .brand .title {
@@ -8,7 +8,7 @@
 .brand .slogan {
   margin-top: 0;
   font-style: italic;
-  font-size: 18px;
+  font-size: var(--font-size-base-plus);
 }
 .brand .actions {
   padding-top: 38px;
